--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@ applciat sepiufes
   <!-- Client side socket io -->
   <script src='/socket.io/socket.io.js' type='text/javascript'></script>
   <!-- JavaScript libraries -->
-  <script src='http://code.jquery.com/jquery-1.8.0.min.js' type='text/javascript'></script>
+  <script src='https://code.jquery.com/jquery-1.8.0.min.js' type='text/javascript'></script>
   <!-- Applicaiton JavaScript -->
   <script src='/javascripts/chat.js' type='text/javascript'></script>
   <script src='/javascripts/chat_ui.js' type='text/javascript'></script>
