Add base styles for header and footer

--- a/public/landing.html
+++ b/public/landing.html
@@ -8,21 +8,35 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body class="landing-page">
-    <header>
-      <div class="logo-image">
-        <img src="">
-      </div>
-    </header>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <p class="lead">H-Message</p>
+      <p class="lead">About</p>
+    </nav>
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 text-center">
-          <h1>Welcome to H-Message. A chat application designed to be simple and intuitive </h1>
+        <div class="col-lg-8 col-lg-offset-2">
+          <h1 class="text-center">Welcome to H-Message. <br>A chat application designed to be simple and intuitive.</h1>
+        </div>
+        <div class="col-lg-2 col-lg-offset-5">
+          <button type="button" class="btn btn-default">Start H-Message</button>
         </div>
       </div>
     </div>
+    <footer class="navbar navbar-inverse navbar-fixed-bottom">
+      <div class="col-lg-6 col-lg-offset-3">
+        <p class="lead">Logo Text</p>
+        <p class="lead">H-Message</p>
+      </div>
+    </footer>
   </body>
 </html>
 
+<!-- <nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+    ...
+  </div>
+</nav>
+ -->
 <!-- <div class="row">
       <div class="small-12 large-12 columns light-text-block">
         <h1>Welcome to Hyperquake.</h1>
