--- a/public/landing.html
+++ b/public/landing.html
@@ -8,10 +8,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body class="landing-page">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <p class="lead">H-Message</p>
-      <p class="lead">About</p>
-    </nav>
+    <div class="container">
+      <nav class="navbar navbar-inverse navbar-fixed-top opacity">
+        <div class="pull-left clearfix logo-img">
+          <img src="h-letter.png">
+        </div>
+        <p class="lead pull-left logo-text">-MESSAGE</p>
+        <p class="lead pull-right">ABOUT</p>
+      </nav>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
@@ -22,7 +27,7 @@
         </div>
       </div>
     </div>
-    <footer class="navbar navbar-inverse navbar-fixed-bottom">
+    <footer class="navbar navbar-inverse navbar-fixed-bottom opacity">
       <div class="col-lg-6 col-lg-offset-3">
         <p class="lead">Logo Text</p>
         <p class="lead">H-Message</p>
