--- a/public/landing.html
+++ b/public/landing.html
@@ -21,16 +21,19 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <h1 class="text-center">Welcome to H-Message. <br>A chat application designed to be simple and intuitive.</h1>
+          <p class="mute text-center">We help businesses shift their future by creating and evolving brand experiences. Try a change.</p>
+          <p class="lead text-center">Built with Node and Express</p>
         </div>
-        <div class="col-lg-2 col-lg-offset-5">
-          <button type="button" class="btn btn-default">Start H-Message</button>
+        <div class="col-lg-4 col-lg-offset-4 text-center">
+          <button type="button" class="start-chat">Start Chatting</button>
         </div>
       </div>
     </div>
     <footer class="navbar navbar-inverse navbar-fixed-bottom opacity">
-      <div class="col-lg-6 col-lg-offset-3">
-        <p class="lead">Logo Text</p>
-        <p class="lead">H-Message</p>
+      <div class>
+        <div class="col-lg-4 col-lg-offset-4 text-center">
+          <img class="logo-img"src="h-letter.png">
+        </div>
       </div>
     </footer>
   </body>
