css3 transitions on hover and text-logo positioning

--- a/public/landing.html
+++ b/public/landing.html
@@ -14,15 +14,15 @@
           <img src="h-letter.png">
         </div>
         <p class="lead pull-left logo-text">-MESSAGE</p>
-        <p class="lead pull-right">ABOUT</p>
+        <p class="lead pull-right hidden-xs">ABOUT</p>
       </nav>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h1 class="text-center">Welcome to H-Message. <br>A chat application designed to be simple and intuitive.</h1>
-          <p class="mute text-center">We help businesses shift their future by creating and evolving brand experiences. Try a change.</p>
-          <p class="lead text-center">Built with Node and Express</p>
+          <h1 class="text-center">Welcome to H-Message. <br><span class="changeColor">A chat application designed to be simple and intuitive.</span></h1>
+          <p class="mute text-center hidden-xs">We help businesses shift their future by creating and evolving brand experiences. Try a change.</p>
+          <p class="lead text-center"><b>Built with Node and Express</b></p>
         </div>
         <div class="col-lg-4 col-lg-offset-4 text-center">
           <button type="button" class="start-chat">Start Chatting</button>
@@ -33,6 +33,7 @@
       <div class>
         <div class="col-lg-4 col-lg-offset-4 text-center">
           <img class="logo-img"src="h-letter.png">
+          <p class="mute text-center">Try a change</p>
         </div>
       </div>
     </footer>
