Changed root path ('/') to landing page

--- a/public/landing.html
+++ b/public/landing.html
@@ -11,7 +11,7 @@
     <div class="container">
       <nav class="navbar navbar-inverse navbar-fixed-top opacity">
         <div class="pull-left clearfix logo-img">
-          <img src="h-letter.png">
+          <a href="index.html"><img src="h-letter.png"></a>
         </div>
         <p class="lead pull-left logo-text">-MESSAGE</p>
         <p class="lead pull-right hidden-xs">ABOUT</p>
@@ -25,14 +25,14 @@
           <p class="lead text-center"><b>Built with Node and Express</b></p>
         </div>
         <div class="col-lg-4 col-lg-offset-4 text-center">
-          <button type="button" class="start-chat">Start Chatting</button>
+          <a href="index.html"><button type="button" class="start-chat">Start Chatting</button></a>
         </div>
       </div>
     </div>
     <footer class="navbar navbar-inverse navbar-fixed-bottom opacity">
       <div class>
         <div class="col-lg-4 col-lg-offset-4 text-center">
-          <img class="logo-img"src="h-letter.png">
+          <a href="index.html"><img class="logo-img"src="h-letter.png"></a>
           <p class="mute text-center">Try a change</p>
         </div>
       </div>
