Removed footer on mobile view

--- a/public/landing.html
+++ b/public/landing.html
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-    <footer class="navbar navbar-inverse navbar-fixed-bottom opacity">
+    <footer class="navbar navbar-inverse navbar-fixed-bottom opacity hidden-xs">
       <div class>
         <div class="col-lg-4 col-lg-offset-4 text-center">
           <a href="index.html"><img class="logo-img"src="h-letter.png"></a>
