--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@ applciat sepiufes
 <html lang='en'>
   <head>
     <title>Hubert's Chat application</title>
+    <link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.css">
     <link rel='stylesheet' href='/stylesheets/style.css'></link>
   </head>
 <body>
