--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,20 @@ applciat sepiufes
 <html lang='en'>
   <head>
     <title>Hubert's Chat application</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.css">
     <link rel='stylesheet' href='/stylesheets/style.css'></link>
   </head>
 <body>
   <div class="container"id='content'>
     <div class="row">
-      <div class="col-xs-12"id='room'></div>
+      <div class="col-xs-12"id='room'>Current Room :</div>
       <div class="col-xs-9"id='messages'></div>
-      <div class="col-xs-3" id='room-list'></div>
+      <div class="col-xs-3" id='room-list'>Room List:</div>
     </div>
     <form id='send-form'>
       <input id='send-message' />
-      <input class="btn btn-default"id='send-button' type='submit' value='Send'/>
+      <input class="btn btn-primary"id='send-button' type='submit' value='Send'/>
       <div id='help'>
         Chat commands:
         <ul>
