--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@ applciat sepiufes
           </div>
         </div>
       </div>
-      <div class="col-xs-3">
+      <div class="col-xs-2">
         <div class="panel panel-info chat-rooms">
           <div class="panel-heading panel-heading-room">
             <h3 class="panel-title" id="panel-title">Room list<a class="anchorjs-link" href="#panel-title"><span class="anchorjs-icon"></span></a></h3>
@@ -40,17 +40,27 @@ applciat sepiufes
         </div>
       </div>
     </div>
-    <form id='send-form'>
-      <input id='send-message' />
-      <input class="btn btn-primary"id='send-button' type='submit' value='Send'/>
-      <div id='help'>
-        Chat commands:
-        <ul>
-        <li>Change nickname: <code>/nick [username]</code></li>
-        <li>Join/create room: <code>/join [room name]</code></li>
-        </ul>
+    <div class="row">
+      <div class="col-xs-9">
+        <form id='send-form'>
+          <div class="row">
+            <div class="col-xs-9">
+              <input class="form-control" id='send-message' placholder"Type Message.."/>
+            </div>
+            <div class="col-xs-3">
+              <button class="btn btn-primary btn-sm btn-msg"id='send-button' type='submit'>Send Message</button>
+            </div>
+          </div>
+        </form>
+        <div id='help'>
+          Chat commands:
+          <ul>
+          <li>Change nickname: <code>/nick [username]</code></li>
+          <li>Join/create room: <code>/join [room name]</code></li>
+          </ul>
+        </div>
       </div>
-    </form>
+    </div>
   </div>
   <!-- Client side socket io -->
   <script src='/socket.io/socket.io.js' type='text/javascript'></script>
