--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,10 @@ applciat sepiufes
         </div>
       </div>
       <div class="col-xs-2 visible-xs">
-        <button class="btn btn-info btn-room">Rooms</button>
-        <button class="btn btn-warning">Cmds</button>
+        <div class="btn-layout">
+          <button class="btn btn-info btn-room">Rooms</button>
+          <button class="btn btn-warning">Cmds</button>
+        </div>
       </div>
     </div>
     <div class="row">
