--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@ applciat sepiufes
       </div>
       <div class="col-xs-2 visible-xs">
         <div class="btn-layout">
-          <button class="btn btn-info btn-room">Rooms</button>
-          <button class="btn btn-warning">Cmds</button>
+          <button class="btn btn-info btn-room" data-toggle="modal" data-target="#roomModal">Rooms</button>
+          <button class="btn btn-warning" data-toggle="modal" data-target="#cmdModal">Cmds</button>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@ applciat sepiufes
         </form>
       </div>
     </div>
-    <div id='help' class="hidden-xs">
+    <div class="chatCmds hidden-xs">
       <h5>Chat commands:</h5>
       <ul>
         <li>Change nickname: <code>/nick [username]</code></li>
@@ -66,11 +66,57 @@ applciat sepiufes
     </div>
   </div>
 
+<!-- Modal list of rooms -->
+<div class="modal fade" id="roomModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="roomLabel">Room List: click room to join</h4>
+      </div>
+      <div class="modal-body">
+        <div id="mobile-room-list">
+          <!-- list of rooms -->
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info btn-room" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal commands -->
+<div class="modal fade" id="cmdModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="cmdLabel">Chat commands</h4>
+      </div>
+      <div class="modal-body">
+        <div id="mobile-cmd-list">
+          <div class='chatCmds'>
+            <h5>Chat commands:</h5>
+            <ul>
+              <li>Change nickname: <code>/nick [username]</code></li>
+              <li>Join/create room: <code>/join [room name]</code></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   <!-- Client side socket io -->
   <script src='/socket.io/socket.io.js' type='text/javascript'></script>
   <!-- JavaScript libraries -->
-  <script src='https://code.jquery.com/jquery-1.8.0.min.js' type='text/javascript'></script>
+  <script src='http://code.jquery.com/jquery-1.11.3.js' type='text/javascript'></script>
+  <script src="bootstrap-3.3.4-dist/js/bootstrap.js"></script>
   <!-- Applicaiton JavaScript -->
   <script src='/javascripts/chat.js' type='text/javascript'></script>
   <script src='/javascripts/chat_ui.js' type='text/javascript'></script>
