Add https for jquery library

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@ applciat sepiufes
   <!-- Client side socket io -->
   <script src='/socket.io/socket.io.js' type='text/javascript'></script>
   <!-- JavaScript libraries -->
-  <script src='http://code.jquery.com/jquery-1.11.3.js' type='text/javascript'></script>
+  <script src='https://code.jquery.com/jquery-1.11.3.js' type='text/javascript'></script>
   <script src="bootstrap-3.3.4-dist/js/bootstrap.js"></script>
   <!-- Applicaiton JavaScript -->
   <script src='/javascripts/chat.js' type='text/javascript'></script>
