Changed style of landing page

--- a/public/landing.html
+++ b/public/landing.html
@@ -9,34 +9,38 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body class="landing-page">
-    <div class="container">
-      <nav class="navbar navbar-inverse navbar-fixed-top opacity">
-        <div class="pull-left clearfix logo-img">
-          <a href="index.html"><img src="h-letter.png"></a>
-        </div>
-        <p class="lead pull-left logo-text">-MESSAGE</p>
-        <p class="lead pull-right hidden-xs">ABOUT</p>
-      </nav>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h1 class="text-center">Welcome to H-Message. <br><span class="changeColor">A chat application designed to be simple and intuitive.</span></h1>
-          <p class="mute text-center hidden-xs">We help businesses shift their future by creating and evolving brand experiences. Try a change.</p>
-          <p class="lead text-center"><b>Built with Node and Express</b></p>
-        </div>
-        <div class="col-lg-4 col-lg-offset-4 text-center">
-          <a href="index.html"><button type="button" class="start-chat">Start Chatting</button></a>
-        </div>
+    <header class="main-header">
+      <div class="logo">
+        <h1>H-MESSAGE</h1>
       </div>
-    </div>
-    <footer class="navbar navbar-inverse navbar-fixed-bottom opacity hidden-xs">
-      <div class>
-        <div class="col-lg-4 col-lg-offset-4 text-center">
-          <a href="index.html"><img class="logo-img"src="h-letter.png"></a>
-          <p class="mute text-center">Try a change</p>
-        </div>
+      <div class="social-media">
+        <a class="icon-twitter"></a>
+        <a class="icon-facebook"></a>
+        <a class="icon-github2"></a>
       </div>
+      <div class="info-links">
+        <nav>
+          <ul>
+            <a href="http://www.hubert-nguyen.com"><li>my <span>Portfolio</span></li></a>
+            <a href=""><li>more <span>info</span></li></a>
+            <a href=""><li>talk <span>to me</span></li></a>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class="main-section">
+      <div class="banner">
+        <h1>Everyone needs communication. Let H-message nurture your idea & brings it to life.</h1>
+      </div>
+      <div class="slogan">
+        <p>Simple communication, great  tool</p>
+      </div>
+    </section>
+    <div class="landing-chat">
+      <a href="index.html"><button class="start-chatting">Start Chatting</button></a>
+    </div>
+    <footer class="main-footer">
+      <p>Hubert Nguyen &copy;  2015</p>
     </footer>
   </body>
 </html>
