--- a/public/landing.html
+++ b/public/landing.html
@@ -21,7 +21,7 @@
       <div class="info-links">
         <nav>
           <ul>
-            <a href="http://www.hubert-nguyen.com"><li>my <span>Portfolio</span></li></a>
+            <a href="http://www.huber-nguyen.com"><li>my <span>Portfolio</span></li></a>
             <a href=""><li>more <span>info</span></li></a>
             <a href=""><li>talk <span>to me</span></li></a>
           </ul>
