Adjusted styling for mobile/desktop view

--- a/public/landing.html
+++ b/public/landing.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </head>
   <body class="landing-page">
-    <header class="main-header">
+    <header class="main-header group">
       <div class="logo">
         <h1>H-MESSAGE</h1>
       </div>
@@ -18,7 +18,7 @@
         <a class="icon-facebook"></a>
         <a class="icon-github2"></a>
       </div>
-      <div class="info-links">
+      <div class="info-links group">
         <nav>
           <ul>
             <a href="http://www.huber-nguyen.com"><li>my <span>Portfolio</span></li></a>
@@ -30,7 +30,7 @@
     </header>
     <section class="main-section">
       <div class="banner">
-        <h1>Everyone needs communication. Let H-message nurture your idea & brings it to life.</h1>
+        <h1>Everyone needs communication. Let H-message nurture your idea & bring it to life.</h1>
       </div>
       <div class="slogan">
         <p>Simple communication, great  tool</p>
@@ -44,25 +44,3 @@
     </footer>
   </body>
 </html>
-
-<!-- <nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container">
-    ...
-  </div>
-</nav>
- -->
-<!-- <div class="row">
-      <div class="small-12 large-12 columns light-text-block">
-        <h1>Welcome to Hyperquake.</h1>
-        <h1 class="secondary-header">
-          <span class="default">We’re a brand evolution agency.</span>
-          <span class="hover">
-          <a href="http://www.hyperquake.com/work/cincinnati-reds">And this one belongs to the Reds.</a>
-          </span>
-        </h1>
-        <p>We help businesses shift their future by creating and evolving brand experiences. Evolve or Fade Away.</p>
-        <h3>EST. 1986 — CINCINNATI, OHIO, USA</h3>
-        <p><a href="/about" class="hq-button">More About Us</a></p>
-      </div>
-    </div>
- -->
