Grammer change on main slogan

--- a/public/landing.html
+++ b/public/landing.html
@@ -21,7 +21,7 @@
       <div class="info-links group">
         <nav>
           <ul>
-            <a href="http://www.huber-nguyen.com"><li>my <span>Portfolio</span></li></a>
+            <a href="http://www.hubert-nguyen.com"><li>my <span>Portfolio</span></li></a>
             <a href=""><li>more <span>info</span></li></a>
             <a href=""><li>talk <span>to me</span></li></a>
           </ul>
@@ -33,7 +33,7 @@
         <h1>Everyone needs communication. Let H-message nurture your idea & bring it to life.</h1>
       </div>
       <div class="slogan">
-        <p>Simple communication, great  tool</p>
+        <p class="lead">Simple communication, great  tool</p>
       </div>
     </section>
     <div class="landing-chat">
