style changes on landing and chat page

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@ applciat sepiufes
     <link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.css">
     <link rel='stylesheet' href='/stylesheets/style.css'></link>
   </head>
-<body>
+<body class="chat-main-body">
   <div class="container"id='content'>
     <div class="row">
       <div class="col-xs-9">
